In the product details page some images appeared as cropped. Fixed in such a way that it will show the full size in product details page

--- a/client/src/app/features/shop/product-details/product-details.component.scss
+++ b/client/src/app/features/shop/product-details/product-details.component.scss
@@ -1,6 +1,6 @@
 .image-wrapper {
   width: 100%;
-  aspect-ratio: 1 / 1;   // forces square like 1024x1024
+  //aspect-ratio: 1 / 1;   // forces square like 1024x1024
   overflow: hidden;
   border-radius: 12px;   // optional (nice touch)
   background-color: #f3f4f6; // light gray fallback
@@ -9,6 +9,6 @@
 .product-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;   // 🔥 key line
+  object-fit: contain;   // 🔥 key line
   display: block;
 }
